// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`fetchStaticPath should return right data  1`] = `
{
  "fallback": "blocking",
  "paths": [
    {
      "locale": "de",
      "params": {
        "slug": [
          "testpagehome",
        ],
      },
    },
    {
      "locale": "en",
      "params": {
        "slug": [
          "testpagehomeen",
        ],
      },
    },
    {
      "locale": "da",
      "params": {
        "slug": [
          "testpagehomeda",
        ],
      },
    },
    {
      "locale": "de",
      "params": {
        "slug": [
          "testpage1",
        ],
      },
    },
    {
      "locale": "en",
      "params": {
        "slug": [
          "testpage1en",
        ],
      },
    },
    {
      "locale": "da",
      "params": {
        "slug": [
          "testpage1da",
        ],
      },
    },
    {
      "locale": "de",
      "params": {
        "slug": [
          "testpagetype",
          "widthsubroute2",
        ],
      },
    },
    {
      "locale": "en",
      "params": {
        "slug": [
          "widthsubroute2en",
        ],
      },
    },
    {
      "locale": "da",
      "params": {
        "slug": [
          "widthsubroute2da",
        ],
      },
    },
    {
      "locale": "de",
      "params": {
        "slug": [
          "capital-testpage3",
        ],
      },
    },
    {
      "locale": "en",
      "params": {
        "slug": [
          "capital-testpage3en",
        ],
      },
    },
    {
      "locale": "da",
      "params": {
        "slug": [
          "capital-testpage3da",
        ],
      },
    },
    {
      "locale": "de",
      "params": {
        "slug": [
          "notransslug",
        ],
      },
    },
    {
      "locale": "en",
      "params": {
        "slug": [
          "notransslug",
        ],
      },
    },
    {
      "locale": "da",
      "params": {
        "slug": [
          "notransslug",
        ],
      },
    },
  ],
}
`;

exports[`fetchStaticPath should return right data no locales  1`] = `
{
  "fallback": "blocking",
  "paths": [
    {
      "params": {
        "slug": [
          "testpagehome",
        ],
      },
    },
    {
      "params": {
        "slug": [
          "testpage1",
        ],
      },
    },
    {
      "params": {
        "slug": [
          "testpagetype",
          "widthsubroute2",
        ],
      },
    },
    {
      "params": {
        "slug": [
          "capital-testpage3",
        ],
      },
    },
    {
      "params": {
        "slug": [
          "notransslug",
        ],
      },
    },
  ],
}
`;
